[gd_scene load_steps=35 format=2]

[ext_resource path="res://lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://lobby/assets/main_menu_bg.png" type="Texture" id=2]
[ext_resource path="res://ui/assets/front_page/tirra_man/tirra_man_3.png" type="Texture" id=3]
[ext_resource path="res://ui/assets/front_page/tirra_man/tirra_man_2.png" type="Texture" id=4]
[ext_resource path="res://ui/assets/front_page/tirra_man/tirra_man_1.png" type="Texture" id=5]
[ext_resource path="res://ui/assets/front_page/whopper/whopper_3.png" type="Texture" id=6]
[ext_resource path="res://ui/assets/front_page/whopper/whopper_1.png" type="Texture" id=7]
[ext_resource path="res://ui/assets/front_page/whopper/whopper_2.png" type="Texture" id=8]
[ext_resource path="res://ui/assets/front_page/bomberman/bomberman_2.png" type="Texture" id=9]
[ext_resource path="res://ui/assets/front_page/bomberman/bomberman_3.png" type="Texture" id=10]
[ext_resource path="res://ui/assets/front_page/bomberman/bomberman_1.png" type="Texture" id=11]
[ext_resource path="res://tirra/assets/pink/small/down/walking_down_2.png" type="Texture" id=12]
[ext_resource path="res://ui/assets/front_page/title/title_2.png" type="Texture" id=13]
[ext_resource path="res://ui/assets/front_page/title/title_1.png" type="Texture" id=14]
[ext_resource path="res://ui/assets/front_page/bomb/bomb_1.png" type="Texture" id=15]
[ext_resource path="res://ui/assets/front_page/spark/spark_2.png" type="Texture" id=16]
[ext_resource path="res://ui/assets/front_page/spark/spark_3.png" type="Texture" id=17]
[ext_resource path="res://ui/assets/front_page/spark/spark_1.png" type="Texture" id=18]
[ext_resource path="res://ui/assets/front_page/saturn/saturn.png" type="Texture" id=19]
[ext_resource path="res://ui/assets/front_page/fire/bottom.png" type="Texture" id=20]
[ext_resource path="res://ui/assets/front_page/fire/top.png" type="Texture" id=21]
[ext_resource path="res://tirra/assets/pink/small/down/walking_down_1.png" type="Texture" id=22]
[ext_resource path="res://tirra/assets/pink/small/down/standing_down.png" type="Texture" id=23]
[ext_resource path="res://main_menu/scripts/menu_animations.gd" type="Script" id=24]
[ext_resource path="res://tirra/assets/pink/small/up/walking_up_1.png" type="Texture" id=25]
[ext_resource path="res://tirra/assets/pink/small/up/walking_up_2.png" type="Texture" id=26]
[ext_resource path="res://main_menu/btn_groups/button_group.tres" type="ButtonGroup" id=27]

[sub_resource type="Animation" id=3]
resource_name = "load"
tracks/0/type = "value"
tracks/0/path = NodePath("TirrraManAnim:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TirrraManAnim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WhopperAnim:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WhopperAnim:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DancingBomberman:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DancingBomberman:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
} ]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundSprite"]
autoplay = "load"
anims/load = SubResource( 3 )

[node name="TirrraManAnim" type="AnimatedSprite" parent="BackgroundSprite"]
position = Vector2( 544, 350.933 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
playing = true

[node name="WhopperAnim" type="AnimatedSprite" parent="BackgroundSprite"]
position = Vector2( 496, 388.266 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
playing = true

[node name="DancingBomberman" type="AnimatedSprite" parent="BackgroundSprite"]
position = Vector2( 72, 388.266 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
playing = true

[node name="Title" type="Node2D" parent="BackgroundSprite"]

[node name="TitleSprite" type="AnimatedSprite" parent="BackgroundSprite/Title"]
position = Vector2( 264, 160 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
playing = true

[node name="SaturnSprite" type="Sprite" parent="BackgroundSprite/Title"]
position = Vector2( 216, 56 )
scale = Vector2( 2, 2 )
texture = ExtResource( 19 )

[node name="BombSparks" type="AnimatedSprite" parent="BackgroundSprite/Title"]
position = Vector2( 224, 72 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
playing = true

[node name="BombSprite" type="Sprite" parent="BackgroundSprite/Title"]
position = Vector2( 208, 128 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )

[node name="BottomFireSprite" type="Sprite" parent="BackgroundSprite/Title"]
position = Vector2( 472, 208 )
scale = Vector2( 2, 2 )
texture = ExtResource( 20 )

[node name="TopFireSprite" type="Sprite" parent="BackgroundSprite/Title"]
position = Vector2( 544, 80 )
scale = Vector2( 2, 2 )
texture = ExtResource( 21 )

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -177.5
margin_right = 126.0
margin_bottom = 177.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Players"]
margin_left = 68.0
margin_top = 307.0
margin_right = 193.0
margin_bottom = 336.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="List" type="ItemList" parent="Players"]
margin_left = 25.0
margin_top = 37.0
margin_right = 229.0
margin_bottom = 296.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="PortForward" type="Label" parent="Players"]
margin_left = -124.0
margin_top = 375.0
margin_right = 128.0
margin_bottom = 429.0
custom_constants/line_spacing = 6
text = "If you want non-LAN clients to connect,
make sure the port 10567 in UDP
is forwarded on your router."
align = 1

[node name="FindPublicIP" type="LinkButton" parent="Players"]
margin_left = 168.0
margin_top = 393.5
margin_right = 341.0
margin_bottom = 407.5
text = "Find your public IP address"

[node name="Connect" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -176.0
margin_right = 85.0
margin_bottom = -9.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 17.0
margin_top = 30.0
margin_right = 173.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"

[node name="IPLabel" type="Label" parent="Connect"]
margin_left = 15.0
margin_top = 66.0
margin_right = 57.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
margin_left = 17.0
margin_top = 85.0
margin_right = 173.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect"]
margin_left = 181.5
margin_top = 30.5
margin_right = 246.5
margin_bottom = 50.5
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="Connect"]
margin_left = 181.0
margin_top = 87.0
margin_right = 246.0
margin_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 15.0
margin_top = 125.0
margin_right = 257.0
margin_bottom = 139.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="ErrorDialog" type="AcceptDialog" parent="."]
visible = true
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnHostGame" type="Button" parent="MainMenu"]
margin_left = 264.0
margin_top = 304.0
margin_right = 356.0
margin_bottom = 324.0
focus_neighbour_left = NodePath("../BtnOptionsGame")
focus_neighbour_top = NodePath("../BtnOptionsGame")
focus_neighbour_right = NodePath("../BtnJoinGame")
focus_neighbour_bottom = NodePath("../BtnJoinGame")
focus_next = NodePath("../BtnJoinGame")
focus_previous = NodePath("../BtnOptionsGame")
group = ExtResource( 27 )
text = "HOST GAME"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="MainMenu/BtnHostGame"]
position = Vector2( -24, 8 )

[node name="BtnJoinGame" type="Button" parent="MainMenu"]
margin_left = 264.0
margin_top = 344.0
margin_right = 347.0
margin_bottom = 364.0
focus_neighbour_left = NodePath("../BtnHostGame")
focus_neighbour_top = NodePath("../BtnHostGame")
focus_neighbour_right = NodePath("../BtnOptionsGame")
focus_neighbour_bottom = NodePath("../BtnOptionsGame")
focus_next = NodePath("../BtnOptionsGame")
focus_previous = NodePath("../BtnHostGame")
group = ExtResource( 27 )
text = "JOIN GAME"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="MainMenu/BtnJoinGame"]
position = Vector2( -24, 8 )

[node name="BtnOptionsGame" type="Button" parent="MainMenu"]
margin_left = 264.0
margin_top = 384.0
margin_right = 347.0
margin_bottom = 404.0
focus_neighbour_left = NodePath("../BtnJoinGame")
focus_neighbour_top = NodePath("../BtnJoinGame")
focus_neighbour_right = NodePath("../BtnHostGame")
focus_neighbour_bottom = NodePath("../BtnHostGame")
focus_next = NodePath("../BtnHostGame")
focus_previous = NodePath("../BtnJoinGame")
group = ExtResource( 27 )
text = "OPTIONS"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="MainMenu/BtnOptionsGame"]
position = Vector2( -24, 8 )

[node name="TirraSprite" type="AnimatedSprite" parent="MainMenu"]
position = Vector2( 240, 350 )
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
playing = true

[node name="TirraTween" type="Tween" parent="MainMenu"]

[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Players/FindPublicIP" to="." method="_on_find_public_ip_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MainMenu/BtnHostGame" to="." method="_on_btn_host_pressed"]
